Add SoftwareApps View Modes & AutounattendGeneratorPage

--- a/src/Winhance.UI/Features/Common/Localization/af.json
+++ b/src/Winhance.UI/Features/Common/Localization/af.json
@@ -146,6 +146,7 @@
   "Category_Optimize_StatusText": "Optimaliseer Jou Windows Stelselverrigting",
   "Category_Customize_Title": "Pasmaak",
   "Category_Customize_StatusText": "Pasmaak Jou Windows Voorkoms en Gedrag",
+  "Category_AdvancedTools_StatusText": "Kragtige gereedskap vir Windows-aanpassing",
   "Category_SoftwareApps_Title": "Sagteware & Toepassings",
   "Category_SoftwareApps_StatusText": "Bestuur Windows Toepassings en Installeer Sagteware",
   "Feature_Notifications_Name": "Kennisgewings",
@@ -996,6 +997,8 @@
   "SoftwareApps_Button_UninstallSelected": "Deïnstalleer Gekose Items",
   "SoftwareApps_Tab_WindowsApps": "Windows Toepassings & Funksies",
   "SoftwareApps_Tab_ExternalApps": "Eksterne Sagteware",
+  "ViewMode_Table": "Tabelaansig",
+  "ViewMode_Card": "Kaartaansig",
   "ExternalApps_Category_Browsers": "Blaaiers",
   "ExternalApps_Category_Compression": "Kompressie",
   "ExternalApps_Category_CustomizationUtilities": "Pasmaak Nutsmiddels",
@@ -1295,6 +1298,9 @@
   "AdvancedTools_Msg_InvalidFilename": "Die lêer moet 'autounattend.xml' genoem word om behoorlik met Windows installasie te werk.\n\nStoor asseblief die lêer met die presiese naam: autounattend.xml",
   "AdvancedTools_Msg_XmlGenSuccess": "Jou autounattend.xml lêer is geskep!\n\nLigging: {0}\n\nVolgende stappe:\n1. Gebruik die WIMUtil funksie om hierdie lêer by 'n Windows ISO te voeg\n2. Of kopieer dit handmatig na die wortel van jou Windows installasie media\n3. Installeer Windows deur die gewysigde media te gebruik\n\nWil jy die WIMUtil gebruik om 'n Windows installasie ISO met hierdie lêer nou te skep?",
   "AdvancedTools_Msg_XmlGenError": "Kon nie autounattend.xml lêer genereer nie.\n\nFout: {0}\n\nKontroleer asseblief die loglêer vir meer besonderhede.",
+  "AdvancedTools_GenerateCard_Description": "Genereer 'n autounattend.xml-lêer gebaseer op jou huidige Winhance-keuses om Windows tydens installasie aan te pas.",
+  "AdvancedTools_InfoBar_MoreOptionsTitle": "Meer genereringsopsies kom binnekort",
+  "AdvancedTools_InfoBar_MoreOptionsMessage": "Bykomende XML-aanpassingsopsies sal in toekomstige opdaterings beskikbaar wees.",
   "Button_OpenWIMUtil": "Maak WIMUtil Oop",
   "Button_DoItLater": "Ek Sal Dit Later Doen",
   "Dialog_FallbackDownload": "Alternatiewe Aflaaimetode",
