--- a/src/Winhance.UI/Features/Common/Localization/cs.json
+++ b/src/Winhance.UI/Features/Common/Localization/cs.json
@@ -146,6 +146,7 @@
   "Category_Optimize_StatusText": "Optimalizujte výkon svého systému Windows",
   "Category_Customize_Title": "Přizpůsobení",
   "Category_Customize_StatusText": "Přizpůsobte si vzhled a chování Windows",
+  "Category_AdvancedTools_StatusText": "Pokročilé nástroje pro přizpůsobení systému Windows",
   "Category_SoftwareApps_Title": "Software a aplikace",
   "Category_SoftwareApps_StatusText": "Spravujte aplikace Windows a instalujte software",
   "Feature_Notifications_Name": "Oznámení",
@@ -996,6 +997,8 @@
   "SoftwareApps_Button_UninstallSelected": "Odinstalovat vybrané položky",
   "SoftwareApps_Tab_WindowsApps": "Aplikace a funkce Windows",
   "SoftwareApps_Tab_ExternalApps": "Externí software",
+  "ViewMode_Table": "Zobrazení tabulky",
+  "ViewMode_Card": "Zobrazení karet",
   "ExternalApps_Category_Browsers": "Prohlížeče",
   "ExternalApps_Category_Compression": "Komprese",
   "ExternalApps_Category_CustomizationUtilities": "Nástroje pro přizpůsobení",
@@ -1295,6 +1298,9 @@
   "AdvancedTools_Msg_InvalidFilename": "Soubor musí být pojmenován 'autounattend.xml', aby správně fungoval s instalací systému Windows.\n\nUložte soubor s přesným názvem: autounattend.xml",
   "AdvancedTools_Msg_XmlGenSuccess": "Váš soubor autounattend.xml byl vytvořen!\n\nUmístění: {0}\n\nDalší kroky:\n1. Použijte funkci WIMUtil k přidání tohoto souboru do Windows ISO\n2. Nebo jej ručně zkopírujte do kořenového adresáře vašeho instalačního média Windows\n3. Nainstalujte Windows pomocí upraveného média\n\nChcete nyní použít WIMUtil k vytvoření instalačního ISO systému Windows s tímto souborem?",
   "AdvancedTools_Msg_XmlGenError": "Nepodařilo se vygenerovat soubor autounattend.xml.\n\nChyba: {0}\n\nPodrobnější informace naleznete v souboru protokolu.",
+  "AdvancedTools_GenerateCard_Description": "Vygenerujte soubor autounattend.xml na základě vašich aktuálních voleb Winhance pro přizpůsobení systému Windows během instalace.",
+  "AdvancedTools_InfoBar_MoreOptionsTitle": "Další možnosti generování již brzy",
+  "AdvancedTools_InfoBar_MoreOptionsMessage": "Další možnosti přizpůsobení XML budou k dispozici v budoucích aktualizacích.",
   "Button_OpenWIMUtil": "Otevřít WIMUtil",
   "Button_DoItLater": "Udělám to později",
   "Dialog_FallbackDownload": "Alternativní metoda stahování",
