--- a/src/Winhance.UI/Features/Common/Localization/de.json
+++ b/src/Winhance.UI/Features/Common/Localization/de.json
@@ -146,6 +146,7 @@
   "Category_Optimize_StatusText": "Optimieren Sie die Leistung Ihres Windows-Systems",
   "Category_Customize_Title": "Anpassungen",
   "Category_Customize_StatusText": "Passen Sie das Erscheinungsbild und Verhalten von Windows an",
+  "Category_AdvancedTools_StatusText": "Leistungsstarke Werkzeuge zur Windows-Anpassung",
   "Category_SoftwareApps_Title": "Software & Apps",
   "Category_SoftwareApps_StatusText": "Windows-Apps verwalten und Software installieren",
   "Feature_Notifications_Name": "Benachrichtigungen",
@@ -996,6 +997,8 @@
   "SoftwareApps_Button_UninstallSelected": "Ausgewählte Elemente deinstallieren",
   "SoftwareApps_Tab_WindowsApps": "Windows-Apps & -Features",
   "SoftwareApps_Tab_ExternalApps": "Externe Software",
+  "ViewMode_Table": "Tabellenansicht",
+  "ViewMode_Card": "Kartenansicht",
   "ExternalApps_Category_Browsers": "Browser",
   "ExternalApps_Category_Compression": "Komprimierung",
   "ExternalApps_Category_CustomizationUtilities": "Anpassungs-Dienstprogramme",
@@ -1295,6 +1298,9 @@
   "AdvancedTools_Msg_InvalidFilename": "Die Datei muss 'autounattend.xml' heißen, um mit der Windows-Installation ordnungsgemäß zu funktionieren.\n\nBitte speichern Sie die Datei mit dem exakten Namen: autounattend.xml",
   "AdvancedTools_Msg_XmlGenSuccess": "Ihre autounattend.xml-Datei wurde erstellt!\n\nSpeicherort: {0}\n\nNächste Schritte:\n1. Verwenden Sie die WIMUtil-Funktion, um diese Datei einer Windows-ISO hinzuzufügen\n2. Oder kopieren Sie sie manuell in das Stammverzeichnis Ihres Windows-Installationsmediums\n3. Installieren Sie Windows mit dem geänderten Medium\n\nMöchten Sie WIMUtil verwenden, um jetzt eine Windows-Installations-ISO mit dieser Datei zu erstellen?",
   "AdvancedTools_Msg_XmlGenError": "Fehler beim Generieren der autounattend.xml-Datei.\n\nFehler: {0}\n\nBitte überprüfen Sie die Protokolldatei für weitere Details.",
+  "AdvancedTools_GenerateCard_Description": "Erstellen Sie eine autounattend.xml-Datei basierend auf Ihren aktuellen Winhance-Auswahlen, um Windows während der Installation anzupassen.",
+  "AdvancedTools_InfoBar_MoreOptionsTitle": "Weitere Generierungsoptionen folgen in Kürze",
+  "AdvancedTools_InfoBar_MoreOptionsMessage": "Zusätzliche XML-Anpassungsoptionen werden in zukünftigen Updates verfügbar sein.",
   "Button_OpenWIMUtil": "WIMUtil öffnen",
   "Button_DoItLater": "Ich mache es später",
   "Dialog_FallbackDownload": "Alternative Download-Methode",
