--- a/src/Winhance.UI/Features/Common/Localization/el.json
+++ b/src/Winhance.UI/Features/Common/Localization/el.json
@@ -146,6 +146,7 @@
   "Category_Optimize_StatusText": "Βελτιστοποιήστε την Απόδοση του Συστήματός σας Windows",
   "Category_Customize_Title": "Προσαρμογές",
   "Category_Customize_StatusText": "Προσαρμόστε την Εμφάνιση και Συμπεριφορά των Windows",
+  "Category_AdvancedTools_StatusText": "Ισχυρά εργαλεία για την προσαρμογή των Windows",
   "Category_SoftwareApps_Title": "Λογισμικό \u0026 Εφαρμογές",
   "Category_SoftwareApps_StatusText": "Διαχείριση Εφαρμογών Windows και Εγκατάσταση Λογισμικού",
   "Feature_Notifications_Name": "Ειδοποιήσεις",
@@ -996,6 +997,8 @@
   "SoftwareApps_Button_UninstallSelected": "Απεγκατάσταση Επιλεγμένων Στοιχείων",
   "SoftwareApps_Tab_WindowsApps": "Εφαρμογές \u0026 Χαρακτηριστικά Windows",
   "SoftwareApps_Tab_ExternalApps": "Εξωτερικό Λογισμικό",
+  "ViewMode_Table": "Προβολή πίνακα",
+  "ViewMode_Card": "Προβολή καρτών",
   "ExternalApps_Category_Browsers": "Προγράμματα Περιήγησης",
   "ExternalApps_Category_Compression": "Συμπίεση",
   "ExternalApps_Category_CustomizationUtilities": "Βοηθητικά Προγράμματα Προσαρμογής",
@@ -1295,6 +1298,9 @@
   "AdvancedTools_Msg_InvalidFilename": "Το αρχείο πρέπει να ονομάζεται \u0027autounattend.xml\u0027 για να λειτουργήσει σωστά με την εγκατάσταση των Windows.\n\nΠαρακαλώ αποθηκεύστε το αρχείο με το ακριβές όνομα: autounattend.xml",
   "AdvancedTools_Msg_XmlGenSuccess": "Το αρχείο autounattend.xml δημιουργήθηκε!\n\nΤοποθεσία: {0}\n\nΕπόμενα βήματα:\n1. Χρησιμοποιήστε τη λειτουργία WIMUtil για να προσθέσετε αυτό το αρχείο σε ένα ISO Windows\n2. Ή αντιγράψτε το χειροκίνητα στη ρίζα των μέσων εγκατάστασης Windows\n3. Εγκαταστήστε τα Windows χρησιμοποιώντας τα τροποποιημένα μέσα\n\nΘα θέλατε να χρησιμοποιήσετε το WIMUtil για να δημιουργήσετε ένα ISO εγκατάστασης Windows με αυτό το αρχείο τώρα;",
   "AdvancedTools_Msg_XmlGenError": "Αποτυχία δημιουργίας αρχείου autounattend.xml.\n\nΣφάλμα: {0}\n\nΠαρακαλώ ελέγξτε το αρχείο καταγραφής για περισσότερες λεπτομέρειες.",
+  "AdvancedTools_GenerateCard_Description": "Δημιουργήστε ένα αρχείο autounattend.xml βάσει των τρεχουσών επιλογών σας στο Winhance για προσαρμογή των Windows κατά την εγκατάσταση.",
+  "AdvancedTools_InfoBar_MoreOptionsTitle": "Περισσότερες επιλογές δημιουργίας σύντομα",
+  "AdvancedTools_InfoBar_MoreOptionsMessage": "Πρόσθετες επιλογές προσαρμογής XML θα είναι διαθέσιμες σε μελλοντικές ενημερώσεις.",
   "Button_OpenWIMUtil": "Άνοιγμα WIMUtil",
   "Button_DoItLater": "Θα το κάνω αργότερα",
   "Dialog_FallbackDownload": "Εναλλακτική Μέθοδος Λήψης",
