--- a/src/Winhance.UI/Features/Common/Localization/en.json
+++ b/src/Winhance.UI/Features/Common/Localization/en.json
@@ -4,7 +4,7 @@
   "Nav_SoftwareAndApps": "Software \u0026 Apps",
   "Nav_Optimize": "Optimize",
   "Nav_Customize": "Customize",
-  "Nav_AdvancedTools": "Advanced  Tools",
+  "Nav_AdvancedTools": "Advanced Tools",
   "Nav_Settings": "Settings",
   "Nav_More": "More",
   "AdvancedTools_MenuItem_WIMUtil": "WIMUtil",
@@ -146,6 +146,7 @@
   "Category_Optimize_StatusText": "Optimize Your Windows System Performance",
   "Category_Customize_Title": "Customizations",
   "Category_Customize_StatusText": "Customize Your Windows Appearance and Behaviour",
+  "Category_AdvancedTools_StatusText": "Power Tools for Windows Customization",
   "Category_SoftwareApps_Title": "Software \u0026 Apps",
   "Category_SoftwareApps_StatusText": "Manage Windows Apps and Install Software",
   "Feature_Notifications_Name": "Notifications",
@@ -996,6 +997,8 @@
   "SoftwareApps_Button_UninstallSelected": "Uninstall Selected Items",
   "SoftwareApps_Tab_WindowsApps": "Windows Apps \u0026 Features",
   "SoftwareApps_Tab_ExternalApps": "External Software",
+  "ViewMode_Table": "Table View",
+  "ViewMode_Card": "Card View",
   "ExternalApps_Category_Browsers": "Browsers",
   "ExternalApps_Category_Compression": "Compression",
   "ExternalApps_Category_CustomizationUtilities": "Customization Utilities",
@@ -1299,6 +1302,9 @@
   "AdvancedTools_Msg_InvalidFilename": "The file must be named \u0027autounattend.xml\u0027 to work properly with Windows installation.\n\nPlease save the file with the exact name: autounattend.xml",
   "AdvancedTools_Msg_XmlGenSuccess": "Your autounattend.xml file has been created!\n\nLocation: {0}\n\nNext steps:\n1. Use the WIMUtil feature to add this file to a Windows ISO\n2. Or manually copy it to the root of your Windows installation media\n3. Install Windows using the modified media\n\nWould you like to use the WIMUtil to create a Windows installation ISO with this file now?",
   "AdvancedTools_Msg_XmlGenError": "Failed to generate autounattend.xml file.\n\nError: {0}\n\nPlease check the log file for more details.",
+  "AdvancedTools_GenerateCard_Description": "Generate an autounattend.xml file based on your current Winhance selections to customize Windows during installation.",
+  "AdvancedTools_InfoBar_MoreOptionsTitle": "More generation options coming soon",
+  "AdvancedTools_InfoBar_MoreOptionsMessage": "Additional XML customization options will be available in future updates.",
   "Button_OpenWIMUtil": "Open WIMUtil",
   "Button_DoItLater": "I\u0027ll Do It Later",
   "Dialog_FallbackDownload": "Alternative Download Method",
