--- a/src/Winhance.UI/Features/Common/Localization/es.json
+++ b/src/Winhance.UI/Features/Common/Localization/es.json
@@ -146,6 +146,7 @@
   "Category_Optimize_StatusText": "Optimiza el Rendimiento de tu Sistema Windows",
   "Category_Customize_Title": "Personalizaciones",
   "Category_Customize_StatusText": "Personaliza la Apariencia y el Comportamiento de Windows",
+  "Category_AdvancedTools_StatusText": "Herramientas avanzadas para la personalización de Windows",
   "Category_SoftwareApps_Title": "Software y Aplicaciones",
   "Category_SoftwareApps_StatusText": "Administrar Aplicaciones de Windows e Instalar Software",
   "Feature_Notifications_Name": "Notificaciones",
@@ -996,6 +997,8 @@
   "SoftwareApps_Button_UninstallSelected": "Desinstalar Elementos Seleccionados",
   "SoftwareApps_Tab_WindowsApps": "Aplicaciones y Características de Windows",
   "SoftwareApps_Tab_ExternalApps": "Software Externo",
+  "ViewMode_Table": "Vista de tabla",
+  "ViewMode_Card": "Vista de tarjeta",
   "ExternalApps_Category_Browsers": "Navegadores",
   "ExternalApps_Category_Compression": "Compresión",
   "ExternalApps_Category_CustomizationUtilities": "Utilidades de Personalización",
@@ -1295,6 +1298,9 @@
   "AdvancedTools_Msg_InvalidFilename": "El archivo debe llamarse 'autounattend.xml' para funcionar correctamente con la instalación de Windows.\n\nGuarda el archivo con el nombre exacto: autounattend.xml",
   "AdvancedTools_Msg_XmlGenSuccess": "¡Tu archivo autounattend.xml ha sido creado!\n\nUbicación: {0}\n\nPróximos pasos:\n1. Usa la función WIMUtil para añadir este archivo a un ISO de Windows\n2. O cópialo manualmente a la raíz de tu medio de instalación de Windows\n3. Instala Windows usando el medio modificado\n\n¿Deseas usar WIMUtil para crear un ISO de instalación de Windows con este archivo ahora?",
   "AdvancedTools_Msg_XmlGenError": "Error al generar el archivo autounattend.xml.\n\nError: {0}\n\nConsulta el archivo de registro para obtener más detalles.",
+  "AdvancedTools_GenerateCard_Description": "Genere un archivo autounattend.xml basado en sus selecciones actuales de Winhance para personalizar Windows durante la instalación.",
+  "AdvancedTools_InfoBar_MoreOptionsTitle": "Más opciones de generación próximamente",
+  "AdvancedTools_InfoBar_MoreOptionsMessage": "Opciones adicionales de personalización XML estarán disponibles en futuras actualizaciones.",
   "Button_OpenWIMUtil": "Abrir Utilidad WIM",
   "Button_DoItLater": "Lo Haré Más Tarde",
   "Dialog_FallbackDownload": "Método de Descarga Alternativo",
