--- a/src/Winhance.UI/Features/Common/Localization/fr.json
+++ b/src/Winhance.UI/Features/Common/Localization/fr.json
@@ -146,6 +146,7 @@
   "Category_Optimize_StatusText": "Optimisez les performances de votre système Windows",
   "Category_Customize_Title": "Personnalisations",
   "Category_Customize_StatusText": "Personnalisez l'apparence et le comportement de votre Windows",
+  "Category_AdvancedTools_StatusText": "Outils avancés pour la personnalisation de Windows",
   "Category_SoftwareApps_Title": "Logiciels & Apps",
   "Category_SoftwareApps_StatusText": "Gérez les applications Windows et installez des logiciels",
   "Feature_Notifications_Name": "Notifications",
@@ -996,6 +997,8 @@
   "SoftwareApps_Button_UninstallSelected": "Désinstaller les éléments sélectionnés",
   "SoftwareApps_Tab_WindowsApps": "Applications et fonctionnalités Windows",
   "SoftwareApps_Tab_ExternalApps": "Logiciels externes",
+  "ViewMode_Table": "Vue tableau",
+  "ViewMode_Card": "Vue carte",
   "ExternalApps_Category_Browsers": "Navigateurs",
   "ExternalApps_Category_Compression": "Compression",
   "ExternalApps_Category_CustomizationUtilities": "Utilitaires de personnalisation",
@@ -1295,6 +1298,9 @@
   "AdvancedTools_Msg_InvalidFilename": "Le fichier doit être nommé 'autounattend.xml' pour fonctionner correctement avec l'installation de Windows.\n\nVeuillez enregistrer le fichier avec le nom exact : autounattend.xml",
   "AdvancedTools_Msg_XmlGenSuccess": "Votre fichier autounattend.xml a été créé !\n\nEmplacement : {0}\n\nProchaines étapes :\n1. Utilisez la fonction WIMUtil pour ajouter ce fichier à une ISO de Windows\n2. Ou copiez-le manuellement à la racine de votre support d'installation de Windows\n3. Installez Windows à l'aide du support modifié\n\nVoulez-vous utiliser le WIMUtil pour créer une ISO d'installation de Windows avec ce fichier maintenant ?",
   "AdvancedTools_Msg_XmlGenError": "Échec de la génération du fichier autounattend.xml.\n\nErreur : {0}\n\nVeuillez consulter le fichier journal pour plus de détails.",
+  "AdvancedTools_GenerateCard_Description": "Générez un fichier autounattend.xml basé sur vos sélections Winhance actuelles pour personnaliser Windows lors de l'installation.",
+  "AdvancedTools_InfoBar_MoreOptionsTitle": "Plus d'options de génération bientôt disponibles",
+  "AdvancedTools_InfoBar_MoreOptionsMessage": "Des options de personnalisation XML supplémentaires seront disponibles dans les prochaines mises à jour.",
   "Button_OpenWIMUtil": "Ouvrir WIMUtil",
   "Button_DoItLater": "Je le ferai plus tard",
   "Dialog_FallbackDownload": "Méthode de téléchargement alternative",
