--- a/src/Winhance.UI/Features/Common/Localization/hi.json
+++ b/src/Winhance.UI/Features/Common/Localization/hi.json
@@ -146,6 +146,7 @@
   "Category_Optimize_StatusText": "अपने विंडोज सिस्टम प्रदर्शन को ऑप्टिमाइज़ करें",
   "Category_Customize_Title": "कस्टमाइज़ेशन",
   "Category_Customize_StatusText": "अपने विंडोज स्वरूप और व्यवहार को कस्टमाइज़ करें",
+  "Category_AdvancedTools_StatusText": "Windows अनुकूलन के लिए उन्नत उपकरण",
   "Category_SoftwareApps_Title": "सॉफ्टवेयर और ऐप्स",
   "Category_SoftwareApps_StatusText": "विंडोज ऐप्स प्रबंधित करें और सॉफ्टवेयर इंस्टॉल करें",
   "Feature_Notifications_Name": "सूचनाएं",
@@ -996,6 +997,8 @@
   "SoftwareApps_Button_UninstallSelected": "चयनित आइटम अनइंस्टॉल करें",
   "SoftwareApps_Tab_WindowsApps": "विंडोज ऐप्स और सुविधाएँ",
   "SoftwareApps_Tab_ExternalApps": "बाहरी सॉफ़्टवेयर",
+  "ViewMode_Table": "तालिका दृश्य",
+  "ViewMode_Card": "कार्ड दृश्य",
   "ExternalApps_Category_Browsers": "ब्राउज़र्स",
   "ExternalApps_Category_Compression": "संपीड़न",
   "ExternalApps_Category_CustomizationUtilities": "अनुकूलन उपयोगिताएँ",
@@ -1295,6 +1298,9 @@
   "AdvancedTools_Msg_InvalidFilename": "विंडोज इंस्टॉलेशन के साथ ठीक से काम करने के लिए फ़ाइल का नाम 'autounattend.xml' होना चाहिए।\n\nकृपया फ़ाइल को सटीक नाम से सहेजें: autounattend.xml",
   "AdvancedTools_Msg_XmlGenSuccess": "आपकी autounattend.xml फ़ाइल बन गई है!\n\nस्थान: {0}\n\nअगले चरण:\n1. इस फ़ाइल को विंडोज आईएसओ में शामिल करने के लिए WIMUtil सुविधा का उपयोग करें\n2. या इसे मैन्युअल रूप से अपने विंडोज इंस्टॉलेशन मीडिया की जड़ में कॉपी करें\n3. संशोधित मीडिया का उपयोग करके विंडोज इंस्टॉल करें\n\nक्या आप अब इस फ़ाइल के साथ विंडोज इंस्टॉलेशन आईएसओ बनाने के लिए WIMUtil का उपयोग करना चाहेंगे?",
   "AdvancedTools_Msg_XmlGenError": "autounattend.xml फ़ाइल बनाने में विफल।\n\nत्रुटि: {0}\n\nअधिक विवरण के लिए कृपया लॉग फ़ाइल जांचें।",
+  "AdvancedTools_GenerateCard_Description": "इंस्टॉलेशन के दौरान Windows को अनुकूलित करने के लिए अपने वर्तमान Winhance चयनों के आधार पर एक autounattend.xml फ़ाइल जनरेट करें।",
+  "AdvancedTools_InfoBar_MoreOptionsTitle": "और अधिक जनरेशन विकल्प जल्द आ रहे हैं",
+  "AdvancedTools_InfoBar_MoreOptionsMessage": "अतिरिक्त XML अनुकूलन विकल्प भविष्य के अपडेट में उपलब्ध होंगे।",
   "Button_OpenWIMUtil": "WIMUtil खोलें",
   "Button_DoItLater": "मैं इसे बाद में करूँगा",
   "Dialog_FallbackDownload": "वैकल्पिक डाउनलोड विधि",
