--- a/src/Winhance.UI/Features/Common/Localization/hu.json
+++ b/src/Winhance.UI/Features/Common/Localization/hu.json
@@ -146,6 +146,7 @@
   "Category_Optimize_StatusText": "Optimalizálja a Windows rendszer teljesítményét",
   "Category_Customize_Title": "Testreszabások",
   "Category_Customize_StatusText": "Testreszabhatja a Windows megjelenését és viselkedését",
+  "Category_AdvancedTools_StatusText": "Fejlett eszközök a Windows testreszabásához",
   "Category_SoftwareApps_Title": "Szoftverek és Alkalmazások",
   "Category_SoftwareApps_StatusText": "Windows-alkalmazások kezelése és szoftver telepítése",
   "Feature_Notifications_Name": "Értesítések",
@@ -996,6 +997,8 @@
   "SoftwareApps_Button_UninstallSelected": "Kiválasztott elemek eltávolítása",
   "SoftwareApps_Tab_WindowsApps": "Windows alkalmazások és funkciók",
   "SoftwareApps_Tab_ExternalApps": "Külső szoftverek",
+  "ViewMode_Table": "Táblázat nézet",
+  "ViewMode_Card": "Kártya nézet",
   "ExternalApps_Category_Browsers": "Böngészők",
   "ExternalApps_Category_Compression": "Tömörítők",
   "ExternalApps_Category_CustomizationUtilities": "Testreszabási segédprogramok",
@@ -1299,6 +1302,9 @@
   "AdvancedTools_Msg_InvalidFilename": "A fájlt 'autounattend.xml' néven kell elnevezni ahhoz, hogy megfelelően működjön a Windows telepítésével..\n\nKérjük, mentse el a fájlt a pontos névvel: autounattend.xml",
   "AdvancedTools_Msg_XmlGenSuccess": "Az autounattend.xml fájl elkészült!\n\nHelye: {0}\n\nKövetkező lépések:\n1. Használja a WIMUtil szolgáltatást, hogy hozzáadja ezt a fájlt egy Windows ISO-hoz\n2. Vagy manuálisan másolja át a Windows telepítési adathordozójának gyökérkönyvtárába\n3. Telepítse a Windows-t a módosított adathordozó használatával\n\nSzeretné a WIMUtil segítségével létrehozni egy Windows telepítési ISO-t ezzel a fájllal?",
   "AdvancedTools_Msg_XmlGenError": "Nem sikerült létrehozni az autounattend.xml fájlt.\n\nHiba: {0}\n\nKérjük, ellenőrizze a naplófájlt további részletekért.",
+  "AdvancedTools_GenerateCard_Description": "Hozzon létre egy autounattend.xml fájlt a jelenlegi Winhance beállítások alapján a Windows telepítés testreszabásához.",
+  "AdvancedTools_InfoBar_MoreOptionsTitle": "További generálási lehetőségek hamarosan",
+  "AdvancedTools_InfoBar_MoreOptionsMessage": "További XML testreszabási lehetőségek lesznek elérhetők a jövőbeli frissítésekben.",
   "Button_OpenWIMUtil": "WIMUtil megnyitása",
   "Button_DoItLater": "Majd később megcsinálom",
   "Dialog_FallbackDownload": "Alternatív letöltési mód",
