--- a/src/Winhance.UI/Features/Common/Localization/it.json
+++ b/src/Winhance.UI/Features/Common/Localization/it.json
@@ -146,6 +146,7 @@
   "Category_Optimize_StatusText": "Ottimizza le prestazioni del tuo sistema Windows",
   "Category_Customize_Title": "Personalizzazioni",
   "Category_Customize_StatusText": "Personalizza l'aspetto e il comportamento di Windows",
+  "Category_AdvancedTools_StatusText": "Strumenti avanzati per la personalizzazione di Windows",
   "Category_SoftwareApps_Title": "Software e App",
   "Category_SoftwareApps_StatusText": "Gestisci le app di Windows e installa software",
   "Feature_Notifications_Name": "Notifiche",
@@ -996,6 +997,8 @@
   "SoftwareApps_Button_UninstallSelected": "Disinstalla elementi selezionati",
   "SoftwareApps_Tab_WindowsApps": "App e funzionalità di Windows",
   "SoftwareApps_Tab_ExternalApps": "Software esterno",
+  "ViewMode_Table": "Vista tabella",
+  "ViewMode_Card": "Vista scheda",
   "ExternalApps_Category_Browsers": "Browser",
   "ExternalApps_Category_Compression": "Compressione",
   "ExternalApps_Category_CustomizationUtilities": "Utilità di personalizzazione",
@@ -1295,6 +1298,9 @@
   "AdvancedTools_Msg_InvalidFilename": "Il file deve essere denominato 'autounattend.xml' per funzionare correttamente con l'installazione di Windows.\n\nSalva il file con il nome esatto: autounattend.xml",
   "AdvancedTools_Msg_XmlGenSuccess": "Il tuo file autounattend.xml è stato creato!\n\nPosizione: {0}\n\nPassaggi successivi:\n1. Utilizza la funzione WIMUtil per aggiungere questo file a un ISO di Windows\n2. Oppure copialo manualmente nella radice del tuo supporto di installazione di Windows\n3. Installa Windows utilizzando il supporto modificato\n\nVuoi utilizzare WIMUtil per creare un ISO di installazione di Windows con questo file ora?",
   "AdvancedTools_Msg_XmlGenError": "Impossibile generare il file autounattend.xml.\n\nErrore: {0}\n\nControlla il file di registro per maggiori dettagli.",
+  "AdvancedTools_GenerateCard_Description": "Genera un file autounattend.xml basato sulle tue selezioni Winhance correnti per personalizzare Windows durante l'installazione.",
+  "AdvancedTools_InfoBar_MoreOptionsTitle": "Altre opzioni di generazione in arrivo",
+  "AdvancedTools_InfoBar_MoreOptionsMessage": "Ulteriori opzioni di personalizzazione XML saranno disponibili nei prossimi aggiornamenti.",
   "Button_OpenWIMUtil": "Apri WIMUtil",
   "Button_DoItLater": "Lo farò più tardi",
   "Dialog_FallbackDownload": "Metodo di download alternativo",
