--- a/src/Winhance.UI/Features/Common/Localization/ja.json
+++ b/src/Winhance.UI/Features/Common/Localization/ja.json
@@ -146,6 +146,7 @@
   "Category_Optimize_StatusText": "Windowsシステムのパフォーマンスを最適化",
   "Category_Customize_Title": "カスタマイズ",
   "Category_Customize_StatusText": "Windowsの外観と動作をカスタマイズ",
+  "Category_AdvancedTools_StatusText": "Windowsカスタマイズのための高度なツール",
   "Category_SoftwareApps_Title": "ソフトウェアとアプリ",
   "Category_SoftwareApps_StatusText": "Windowsアプリの管理とソフトウェアのインストール",
   "Feature_Notifications_Name": "通知",
@@ -996,6 +997,8 @@
   "SoftwareApps_Button_UninstallSelected": "選択した項目をアンインストール",
   "SoftwareApps_Tab_WindowsApps": "Windowsアプリと機能",
   "SoftwareApps_Tab_ExternalApps": "外部ソフトウェア",
+  "ViewMode_Table": "テーブル表示",
+  "ViewMode_Card": "カード表示",
   "ExternalApps_Category_Browsers": "ブラウザ",
   "ExternalApps_Category_Compression": "圧縮",
   "ExternalApps_Category_CustomizationUtilities": "カスタマイズユーティリティ",
@@ -1295,6 +1298,9 @@
   "AdvancedTools_Msg_InvalidFilename": "Windowsインストールで正しく動作するには、ファイル名を「autounattend.xml」にする必要があります。\n\nファイルを正確な名前で保存してください：autounattend.xml",
   "AdvancedTools_Msg_XmlGenSuccess": "autounattend.xmlファイルが作成されました！\n\n場所：{0}\n\n次のステップ：\n1. WIMUtil機能を使用して、このファイルをWindows ISOに追加します\n2. または、Windowsインストールメディアのルートに手動でコピーします\n3. 変更したメディアを使用してWindowsをインストールします\n\nこのファイルを使用してWindowsインストールISOを作成するためにWIMUtilを使用しますか？",
   "AdvancedTools_Msg_XmlGenError": "autounattend.xmlファイルの生成に失敗しました。\n\nエラー：{0}\n\n詳細については、ログファイルを確認してください。",
+  "AdvancedTools_GenerateCard_Description": "現在のWinhanceの選択に基づいてautounattend.xmlファイルを生成し、インストール時にWindowsをカスタマイズします。",
+  "AdvancedTools_InfoBar_MoreOptionsTitle": "その他の生成オプションは近日公開予定",
+  "AdvancedTools_InfoBar_MoreOptionsMessage": "追加のXMLカスタマイズオプションは今後のアップデートで利用可能になります。",
   "Button_OpenWIMUtil": "WIMUtilを開く",
   "Button_DoItLater": "後でやる",
   "Dialog_FallbackDownload": "代替ダウンロード方法",
