--- a/src/Winhance.UI/Features/Common/Localization/lt.json
+++ b/src/Winhance.UI/Features/Common/Localization/lt.json
@@ -146,6 +146,7 @@
   "Category_Optimize_StatusText": "Optimizuokite savo Windows sistemos našumą",
   "Category_Customize_Title": "Pritaikymai",
   "Category_Customize_StatusText": "Pritaikykite savo Windows išvaizdą ir elgseną",
+  "Category_AdvancedTools_StatusText": "Galingi įrankiai „Windows“ tinkinimui",
   "Category_SoftwareApps_Title": "Programinė įranga ir programos",
   "Category_SoftwareApps_StatusText": "Valdykite Windows programas ir diekite programinę įrangą",
   "Feature_Notifications_Name": "Pranešimai",
@@ -996,6 +997,8 @@
   "SoftwareApps_Button_UninstallSelected": "Pašalinti pasirinktus elementus",
   "SoftwareApps_Tab_WindowsApps": "Windows programos ir funkcijos",
   "SoftwareApps_Tab_ExternalApps": "Išorinė programinė įranga",
+  "ViewMode_Table": "Lentelės rodinys",
+  "ViewMode_Card": "Kortelių rodinys",
   "ExternalApps_Category_Browsers": "Naršyklės",
   "ExternalApps_Category_Compression": "Suspaudimas",
   "ExternalApps_Category_CustomizationUtilities": "Tinkinimo priemonės",
@@ -1295,6 +1298,9 @@
   "AdvancedTools_Msg_InvalidFilename": "Failas turi būti pavadintas „autounattend.xml“, kad tinkamai veiktų su Windows diegimu.\n\nIšsaugokite failą tiksliu pavadinimu: autounattend.xml",
   "AdvancedTools_Msg_XmlGenSuccess": "Jūsų autounattend.xml failas sukurtas!\n\nVieta: {0}\n\nKiti žingsniai:\n1. Naudokite WIMUtil funkciją, kad pridėtumėte šį failą prie Windows ISO\n2. Arba rankiniu būdu nukopijuokite jį į savo Windows diegimo medijos šakninį katalogą\n3. Įdiekite Windows naudodami modifikuotą mediją\n\nAr norėtumėte dabar naudoti WIMUtil, kad sukurtumėte Windows diegimo ISO su šiuo failu?",
   "AdvancedTools_Msg_XmlGenError": "Nepavyko sugeneruoti autounattend.xml failo.\n\nKlaida: {0}\n\nDaugiau informacijos ieškokite žurnalo faile.",
+  "AdvancedTools_GenerateCard_Description": "Sukurkite autounattend.xml failą pagal dabartinius „Winhance“ pasirinkimus, kad pritaikytumėte „Windows“ diegimo metu.",
+  "AdvancedTools_InfoBar_MoreOptionsTitle": "Daugiau generavimo parinkčių netrukus",
+  "AdvancedTools_InfoBar_MoreOptionsMessage": "Papildomos XML tinkinimo parinktys bus prieinamos būsimuose atnaujinimuose.",
   "Button_OpenWIMUtil": "Atidaryti WIMUtil",
   "Button_DoItLater": "Padarysiu vėliau",
   "Dialog_FallbackDownload": "Alternatyvus atsisiuntimo metodas",
