--- a/src/Winhance.UI/Features/Common/Localization/lv.json
+++ b/src/Winhance.UI/Features/Common/Localization/lv.json
@@ -146,6 +146,7 @@
   "Category_Optimize_StatusText": "Optimizējiet savu Windows sistēmas veiktspēju",
   "Category_Customize_Title": "Pielāgojumi",
   "Category_Customize_StatusText": "Pielāgojiet savu Windows izskatu un uzvedību",
+  "Category_AdvancedTools_StatusText": "Jaudīgi rīki „Windows“ pielāgošanai",
   "Category_SoftwareApps_Title": "Programmatūra un lietotnes",
   "Category_SoftwareApps_StatusText": "Pārvaldiet Windows lietotnes un instalējiet programmatūru",
   "Feature_Notifications_Name": "Paziņojumi",
@@ -996,6 +997,8 @@
   "SoftwareApps_Button_UninstallSelected": "Atinstalēt atlasītos vienumus",
   "SoftwareApps_Tab_WindowsApps": "Windows lietotnes un funkcijas",
   "SoftwareApps_Tab_ExternalApps": "Ārējā programmatūra",
+  "ViewMode_Table": "Tabulas skats",
+  "ViewMode_Card": "Karšu skats",
   "ExternalApps_Category_Browsers": "Pārlūkprogrammas",
   "ExternalApps_Category_Compression": "Saspiešana",
   "ExternalApps_Category_CustomizationUtilities": "Pielāgošanas utilītas",
@@ -1295,6 +1298,9 @@
   "AdvancedTools_Msg_InvalidFilename": "Failam jābūt nosauktam 'autounattend.xml', lai tas pareizi darbotos ar Windows instalāciju.\n\nLūdzu, saglabājiet failu ar precīzu nosaukumu: autounattend.xml",
   "AdvancedTools_Msg_XmlGenSuccess": "Jūsu autounattend.xml fails ir izveidots!\n\nAtrašanās vieta: {0}\n\nNākamie soļi:\n1. Izmantojiet WIMUtil funkciju, lai pievienotu šo failu Windows ISO\n2. Vai manuāli nokopējiet to uz savas Windows instalācijas multivides saknes\n3. Instalējiet Windows, izmantojot modificēto multividi\n\nVai vēlaties izmantot WIMUtil, lai izveidotu Windows instalācijas ISO ar šo failu tagad?",
   "AdvancedTools_Msg_XmlGenError": "Neizdevās ģenerēt autounattend.xml failu.\n\nKļūda: {0}\n\nLūdzu, pārbaudiet žurnāla failu, lai iegūtu sīkāku informāciju.",
+  "AdvancedTools_GenerateCard_Description": "Izveidojiet autounattend.xml failu, pamatojoties uz jūsu pašreizējām „Winhance“ izvēlēm, lai pielāgotu „Windows“ instalēšanas laikā.",
+  "AdvancedTools_InfoBar_MoreOptionsTitle": "Vairāk ģenerēšanas iespēju drīzumā",
+  "AdvancedTools_InfoBar_MoreOptionsMessage": "Papildu XML pielāgošanas iespējas būs pieejamas turpmākajos atjauninājumos.",
   "Button_OpenWIMUtil": "Atvērt WIMUtil",
   "Button_DoItLater": "Es to izdarīšu vēlāk",
   "Dialog_FallbackDownload": "Alternatīva lejupielādes metode",
