--- a/src/Winhance.UI/Features/Common/Localization/nl-BE.json
+++ b/src/Winhance.UI/Features/Common/Localization/nl-BE.json
@@ -146,6 +146,7 @@
   "Category_Optimize_StatusText": "Optimaliseer uw Windows Systeemprestaties",
   "Category_Customize_Title": "Aanpassingen",
   "Category_Customize_StatusText": "Pas uw Windows Uiterlijk en Gedrag aan",
+  "Category_AdvancedTools_StatusText": "Krachtige hulpmiddelen voor Windows-aanpassing",
   "Category_SoftwareApps_Title": "Software \u0026 Apps",
   "Category_SoftwareApps_StatusText": "Beheer Windows Apps en Installeer Software",
   "Feature_Notifications_Name": "Meldingen",
@@ -996,6 +997,8 @@
   "SoftwareApps_Button_UninstallSelected": "Geselecteerde Items Deïnstalleren",
   "SoftwareApps_Tab_WindowsApps": "Windows Apps \u0026 Functies",
   "SoftwareApps_Tab_ExternalApps": "Externe Software",
+  "ViewMode_Table": "Tabelweergave",
+  "ViewMode_Card": "Kaartweergave",
   "ExternalApps_Category_Browsers": "Browsers",
   "ExternalApps_Category_Compression": "Compressie",
   "ExternalApps_Category_CustomizationUtilities": "Aanpassingshulpprogramma\u0027s",
@@ -1295,6 +1298,9 @@
   "AdvancedTools_Msg_InvalidFilename": "Het bestand moet \u0027autounattend.xml\u0027 heten om correct te werken met Windows-installatie.\n\nSla het bestand op met de exacte naam: autounattend.xml",
   "AdvancedTools_Msg_XmlGenSuccess": "Uw autounattend.xml bestand is gemaakt!\n\nLocatie: {0}\n\nVolgende stappen:\n1. Gebruik de WIMUtil functie om dit bestand toe te voegen aan een Windows ISO\n2. Of kopieer het handmatig naar de root van uw Windows installatiemedia\n3. Installeer Windows met behulp van de aangepaste media\n\nWilt u de WIMUtil gebruiken om nu een Windows installatie-ISO met dit bestand te maken?",
   "AdvancedTools_Msg_XmlGenError": "Mislukt om autounattend.xml bestand te genereren.\n\nFout: {0}\n\nControleer het logbestand voor meer details.",
+  "AdvancedTools_GenerateCard_Description": "Genereer een autounattend.xml-bestand op basis van uw huidige Winhance-selecties om Windows aan te passen tijdens de installatie.",
+  "AdvancedTools_InfoBar_MoreOptionsTitle": "Meer generatieopties binnenkort beschikbaar",
+  "AdvancedTools_InfoBar_MoreOptionsMessage": "Extra XML-aanpassingsopties worden beschikbaar in toekomstige updates.",
   "Button_OpenWIMUtil": "WIMUtil Openen",
   "Button_DoItLater": "Ik Doe Het Later",
   "Dialog_FallbackDownload": "Alternatieve Downloadmethode",
