--- a/src/Winhance.UI/Features/Common/Localization/pl.json
+++ b/src/Winhance.UI/Features/Common/Localization/pl.json
@@ -146,6 +146,7 @@
   "Category_Optimize_StatusText": "Zoptymalizuj wydajność systemu Windows",
   "Category_Customize_Title": "Dostosowania",
   "Category_Customize_StatusText": "Dostosuj wygląd i zachowanie systemu Windows",
+  "Category_AdvancedTools_StatusText": "Zaawansowane narzędzia do dostosowywania systemu Windows",
   "Category_SoftwareApps_Title": "Oprogramowanie i Aplikacje",
   "Category_SoftwareApps_StatusText": "Zarządzaj aplikacjami Windows i instaluj oprogramowanie",
   "Feature_Notifications_Name": "Powiadomienia",
@@ -996,6 +997,8 @@
   "SoftwareApps_Button_UninstallSelected": "Odinstaluj wybrane elementy",
   "SoftwareApps_Tab_WindowsApps": "Aplikacje i funkcje Windows",
   "SoftwareApps_Tab_ExternalApps": "Oprogramowanie zewnętrzne",
+  "ViewMode_Table": "Widok tabeli",
+  "ViewMode_Card": "Widok kart",
   "ExternalApps_Category_Browsers": "Przeglądarki",
   "ExternalApps_Category_Compression": "Kompresja",
   "ExternalApps_Category_CustomizationUtilities": "Narzędzia do dostosowywania",
@@ -1295,6 +1298,9 @@
   "AdvancedTools_Msg_InvalidFilename": "Plik musi mieć nazwę 'autounattend.xml', aby działał prawidłowo z instalacją systemu Windows.\n\nZapisz plik pod dokładną nazwą: autounattend.xml",
   "AdvancedTools_Msg_XmlGenSuccess": "Twój plik autounattend.xml został utworzony!\n\nLokalizacja: {0}\n\nNastępne kroki:\n1. Użyj funkcji WIMUtil, aby dodać ten plik do obrazu ISO systemu Windows\n2. Lub ręcznie skopiuj go do katalogu głównego nośnika instalacyjnego systemu Windows\n3. Zainstaluj system Windows za pomocą zmodyfikowanego nośnika\n\nCzy chcesz teraz użyć WIMUtil do utworzenia obrazu ISO instalacyjnego systemu Windows z tym plikiem?",
   "AdvancedTools_Msg_XmlGenError": "Nie udało się wygenerować pliku autounattend.xml.\n\nBłąd: {0}\n\nSprawdź plik dziennika, aby uzyskać więcej szczegółów.",
+  "AdvancedTools_GenerateCard_Description": "Wygeneruj plik autounattend.xml na podstawie bieżących wyborów Winhance, aby dostosować system Windows podczas instalacji.",
+  "AdvancedTools_InfoBar_MoreOptionsTitle": "Więcej opcji generowania wkrótce",
+  "AdvancedTools_InfoBar_MoreOptionsMessage": "Dodatkowe opcje dostosowywania XML będą dostępne w przyszłych aktualizacjach.",
   "Button_OpenWIMUtil": "Otwórz WIMUtil",
   "Button_DoItLater": "Zrobię to później",
   "Dialog_FallbackDownload": "Alternatywna metoda pobierania",
