--- a/src/Winhance.UI/Features/Common/Localization/pt-BR.json
+++ b/src/Winhance.UI/Features/Common/Localization/pt-BR.json
@@ -146,6 +146,7 @@
   "Category_Optimize_StatusText": "Otimize o Desempenho do seu Sistema Windows",
   "Category_Customize_Title": "Personalizações",
   "Category_Customize_StatusText": "Personalize a Aparência e o Comportamento do seu Windows",
+  "Category_AdvancedTools_StatusText": "Ferramentas avançadas para personalização do Windows",
   "Category_SoftwareApps_Title": "Software e Aplicativos",
   "Category_SoftwareApps_StatusText": "Gerencie Aplicativos do Windows e Instale Software",
   "Feature_Notifications_Name": "Notificações",
@@ -996,6 +997,8 @@
   "SoftwareApps_Button_UninstallSelected": "Desinstalar Itens Selecionados",
   "SoftwareApps_Tab_WindowsApps": "Aplicativos e Recursos do Windows",
   "SoftwareApps_Tab_ExternalApps": "Software Externo",
+  "ViewMode_Table": "Visualização em tabela",
+  "ViewMode_Card": "Visualização em cartão",
   "ExternalApps_Category_Browsers": "Navegadores",
   "ExternalApps_Category_Compression": "Compressão",
   "ExternalApps_Category_CustomizationUtilities": "Utilitários de Personalização",
@@ -1295,6 +1298,9 @@
   "AdvancedTools_Msg_InvalidFilename": "O arquivo deve ser nomeado 'autounattend.xml' para funcionar corretamente com a instalação do Windows.\n\nSalve o arquivo com o nome exato: autounattend.xml",
   "AdvancedTools_Msg_XmlGenSuccess": "Seu arquivo autounattend.xml foi criado!\n\nLocal: {0}\n\nPróximos passos:\n1. Use o recurso WIMUtil para adicionar este arquivo a um ISO do Windows\n2. Ou copie-o manualmente para a raiz da sua mídia de instalação do Windows\n3. Instale o Windows usando a mídia modificada\n\nDeseja usar o WIMUtil para criar um ISO de instalação do Windows com este arquivo agora?",
   "AdvancedTools_Msg_XmlGenError": "Falha ao gerar o arquivo autounattend.xml.\n\nErro: {0}\n\nVerifique o arquivo de log para mais detalhes.",
+  "AdvancedTools_GenerateCard_Description": "Gere um arquivo autounattend.xml com base nas suas seleções atuais do Winhance para personalizar o Windows durante a instalação.",
+  "AdvancedTools_InfoBar_MoreOptionsTitle": "Mais opções de geração em breve",
+  "AdvancedTools_InfoBar_MoreOptionsMessage": "Opções adicionais de personalização XML estarão disponíveis em atualizações futuras.",
   "Button_OpenWIMUtil": "Abrir WIMUtil",
   "Button_DoItLater": "Farei Isso Mais Tarde",
   "Dialog_FallbackDownload": "Método de Download Alternativo",
