--- a/src/Winhance.UI/Features/Common/Localization/ru.json
+++ b/src/Winhance.UI/Features/Common/Localization/ru.json
@@ -146,6 +146,7 @@
   "Category_Optimize_StatusText": "Оптимизируйте производительность вашей системы Windows",
   "Category_Customize_Title": "Настройки",
   "Category_Customize_StatusText": "Настройте внешний вид и поведение Windows",
+  "Category_AdvancedTools_StatusText": "Мощные инструменты для настройки Windows",
   "Category_SoftwareApps_Title": "Программы и приложения",
   "Category_SoftwareApps_StatusText": "Управляйте приложениями Windows и устанавливайте программное обеспечение",
   "Feature_Notifications_Name": "Уведомления",
@@ -996,6 +997,8 @@
   "SoftwareApps_Button_UninstallSelected": "Удалить выбранные элементы",
   "SoftwareApps_Tab_WindowsApps": "Приложения и компоненты Windows",
   "SoftwareApps_Tab_ExternalApps": "Внешнее ПО",
+  "ViewMode_Table": "Табличный вид",
+  "ViewMode_Card": "Вид карточек",
   "ExternalApps_Category_Browsers": "Браузеры",
   "ExternalApps_Category_Compression": "Сжатие",
   "ExternalApps_Category_CustomizationUtilities": "Утилиты настройки",
@@ -1295,6 +1298,9 @@
   "AdvancedTools_Msg_InvalidFilename": "Файл должен называться 'autounattend.xml', чтобы правильно работать с установкой Windows.\n\nПожалуйста, сохраните файл с точным именем: autounattend.xml",
   "AdvancedTools_Msg_XmlGenSuccess": "Ваш файл autounattend.xml создан!\n\nРасположение: {0}\n\nСледующие шаги:\n1. Используйте функцию WIMUtil, чтобы добавить этот файл в ISO-образ Windows\n2. Или вручную скопируйте его в корень вашего установочного носителя Windows\n3. Установите Windows с помощью измененного носителя\n\nХотите ли вы использовать WIMUtil для создания установочного ISO-образа Windows с этим файлом сейчас?",
   "AdvancedTools_Msg_XmlGenError": "Не удалось создать файл autounattend.xml.\n\nОшибка: {0}\n\nПожалуйста, проверьте лог-файл для получения более подробной информации.",
+  "AdvancedTools_GenerateCard_Description": "Создайте файл autounattend.xml на основе текущих настроек Winhance для автоматизации установки Windows.",
+  "AdvancedTools_InfoBar_MoreOptionsTitle": "Дополнительные параметры генерации скоро появятся",
+  "AdvancedTools_InfoBar_MoreOptionsMessage": "Дополнительные параметры настройки XML будут доступны в будущих обновлениях.",
   "Button_OpenWIMUtil": "Открыть WIMUtil",
   "Button_DoItLater": "Я сделаю это позже",
   "Dialog_FallbackDownload": "Альтернативный метод загрузки",
