--- a/src/Winhance.UI/Features/Common/Localization/sv.json
+++ b/src/Winhance.UI/Features/Common/Localization/sv.json
@@ -146,6 +146,7 @@
   "Category_Optimize_StatusText": "Optimera ditt Windows-systems prestanda",
   "Category_Customize_Title": "Anpassningar",
   "Category_Customize_StatusText": "Anpassa ditt Windows utseende och beteende",
+  "Category_AdvancedTools_StatusText": "Kraftfulla verktyg för Windows-anpassning",
   "Category_SoftwareApps_Title": "Programvara och appar",
   "Category_SoftwareApps_StatusText": "Hantera Windows-appar och installera programvara",
   "Feature_Notifications_Name": "Meddelanden",
@@ -996,6 +997,8 @@
   "SoftwareApps_Button_UninstallSelected": "Avinstallera valda objekt",
   "SoftwareApps_Tab_WindowsApps": "Windows-appar och funktioner",
   "SoftwareApps_Tab_ExternalApps": "Extern programvara",
+  "ViewMode_Table": "Tabellvy",
+  "ViewMode_Card": "Kortvy",
   "ExternalApps_Category_Browsers": "Webbläsare",
   "ExternalApps_Category_Compression": "Komprimering",
   "ExternalApps_Category_CustomizationUtilities": "Anpassningsverktyg",
@@ -1295,6 +1298,9 @@
   "AdvancedTools_Msg_InvalidFilename": "Filen måste heta 'autounattend.xml' för att fungera korrekt med Windows-installationen.\n\nSpara filen med det exakta namnet: autounattend.xml",
   "AdvancedTools_Msg_XmlGenSuccess": "Din autounattend.xml-fil har skapats!\n\nPlats: {0}\n\nNästa steg:\n1. Använd WIMUtil-funktionen för att lägga till den här filen i en Windows ISO\n2. Eller kopiera den manuellt till roten av ditt Windows-installationsmedia\n3. Installera Windows med det modifierade mediet\n\nVill du använda WIMUtil för att skapa en Windows-installations-ISO med den här filen nu?",
   "AdvancedTools_Msg_XmlGenError": "Misslyckades med att generera autounattend.xml-fil.\n\nFel: {0}\n\nKontrollera loggfilen för mer information.",
+  "AdvancedTools_GenerateCard_Description": "Generera en autounattend.xml-fil baserad på dina aktuella Winhance-val för att anpassa Windows under installationen.",
+  "AdvancedTools_InfoBar_MoreOptionsTitle": "Fler genereringsalternativ kommer snart",
+  "AdvancedTools_InfoBar_MoreOptionsMessage": "Ytterligare XML-anpassningsalternativ kommer att finnas tillgängliga i framtida uppdateringar.",
   "Button_OpenWIMUtil": "Öppna WIMUtil",
   "Button_DoItLater": "Jag gör det senare",
   "Dialog_FallbackDownload": "Alternativ nedladdningsmetod",
