--- a/src/Winhance.UI/Features/Common/Localization/uk.json
+++ b/src/Winhance.UI/Features/Common/Localization/uk.json
@@ -146,6 +146,7 @@
   "Category_Optimize_StatusText": "Оптимізуйте продуктивність вашої системи Windows",
   "Category_Customize_Title": "Налаштування",
   "Category_Customize_StatusText": "Налаштуйте зовнішній вигляд та поведінку Windows",
+  "Category_AdvancedTools_StatusText": "Потужні інструменти для налаштування Windows",
   "Category_SoftwareApps_Title": "Програми та додатки",
   "Category_SoftwareApps_StatusText": "Керуйте додатками Windows та встановлюйте програмне забезпечення",
   "Feature_Notifications_Name": "Сповіщення",
@@ -996,6 +997,8 @@
   "SoftwareApps_Button_UninstallSelected": "Видалити вибрані елементи",
   "SoftwareApps_Tab_WindowsApps": "Додатки та функції Windows",
   "SoftwareApps_Tab_ExternalApps": "Зовнішнє програмне забезпечення",
+  "ViewMode_Table": "Табличний вигляд",
+  "ViewMode_Card": "Вигляд карток",
   "ExternalApps_Category_Browsers": "Браузери",
   "ExternalApps_Category_Compression": "Стиснення",
   "ExternalApps_Category_CustomizationUtilities": "Утиліти налаштування",
@@ -1295,6 +1298,9 @@
   "AdvancedTools_Msg_InvalidFilename": "Файл повинен мати назву 'autounattend.xml', щоб правильно працювати з інсталяцією Windows.\n\nБудь ласка, збережіть файл з точною назвою: autounattend.xml",
   "AdvancedTools_Msg_XmlGenSuccess": "Ваш файл autounattend.xml створено!\n\nРозташування: {0}\n\nНаступні кроки:\n1. Використовуйте функцію WIMUtil, щоб додати цей файл до ISO Windows\n2. Або скопіюйте його вручну в корінь вашого інсталяційного носія Windows\n3. Встановіть Windows, використовуючи змінений носій\n\nБажаєте використати WIMUtil для створення інсталяційного ISO Windows з цим файлом зараз?",
   "AdvancedTools_Msg_XmlGenError": "Не вдалося створити файл autounattend.xml.\n\nПомилка: {0}\n\nБудь ласка, перевірте файл журналу для отримання додаткової інформації.",
+  "AdvancedTools_GenerateCard_Description": "Створіть файл autounattend.xml на основі поточних налаштувань Winhance для автоматизації встановлення Windows.",
+  "AdvancedTools_InfoBar_MoreOptionsTitle": "Додаткові параметри генерації незабаром",
+  "AdvancedTools_InfoBar_MoreOptionsMessage": "Додаткові параметри налаштування XML будуть доступні в майбутніх оновленнях.",
   "Button_OpenWIMUtil": "Відкрити WIMUtil",
   "Button_DoItLater": "Я зроблю це пізніше",
   "Dialog_FallbackDownload": "Альтернативний метод завантаження",
