--- a/src/Winhance.UI/Features/Common/Localization/vi.json
+++ b/src/Winhance.UI/Features/Common/Localization/vi.json
@@ -146,6 +146,7 @@
   "Category_Optimize_StatusText": "Tối ưu hóa hiệu suất hệ thống Windows của bạn",
   "Category_Customize_Title": "Tùy chỉnh",
   "Category_Customize_StatusText": "Tùy chỉnh giao diện và hành vi của Windows",
+  "Category_AdvancedTools_StatusText": "Công cụ nâng cao để tùy chỉnh Windows",
   "Category_SoftwareApps_Title": "Phần mềm & Ứng dụng",
   "Category_SoftwareApps_StatusText": "Quản lý ứng dụng Windows và cài đặt phần mềm",
   "Feature_Notifications_Name": "Thông báo",
@@ -996,6 +997,8 @@
   "SoftwareApps_Button_UninstallSelected": "Gỡ cài đặt các mục đã chọn",
   "SoftwareApps_Tab_WindowsApps": "Ứng dụng & Tính năng của Windows",
   "SoftwareApps_Tab_ExternalApps": "Phần mềm bên ngoài",
+  "ViewMode_Table": "Chế độ bảng",
+  "ViewMode_Card": "Chế độ thẻ",
   "ExternalApps_Category_Browsers": "Trình duyệt",
   "ExternalApps_Category_Compression": "Nén",
   "ExternalApps_Category_CustomizationUtilities": "Tiện ích tùy chỉnh",
@@ -1295,6 +1298,9 @@
   "AdvancedTools_Msg_InvalidFilename": "Tệp phải được đặt tên là 'autounattend.xml' để hoạt động bình thường với cài đặt Windows.\n\nVui lòng lưu tệp với tên chính xác: autounattend.xml",
   "AdvancedTools_Msg_XmlGenSuccess": "Tệp autounattend.xml của bạn đã được tạo!\n\nVị trí: {0}\n\nCác bước tiếp theo:\n1. Sử dụng tính năng WIMUtil để thêm tệp này vào Windows ISO\n2. Hoặc sao chép thủ công vào thư mục gốc của phương tiện cài đặt Windows của bạn\n3. Cài đặt Windows bằng phương tiện đã sửa đổi\n\nBạn có muốn sử dụng WIMUtil để tạo một ISO cài đặt Windows với tệp này ngay bây giờ không?",
   "AdvancedTools_Msg_XmlGenError": "Không thể tạo tệp autounattend.xml.\n\nLỗi: {0}\n\nVui lòng kiểm tra tệp nhật ký để biết thêm chi tiết.",
+  "AdvancedTools_GenerateCard_Description": "Tạo tệp autounattend.xml dựa trên các lựa chọn Winhance hiện tại của bạn để tùy chỉnh Windows trong quá trình cài đặt.",
+  "AdvancedTools_InfoBar_MoreOptionsTitle": "Thêm tùy chọn tạo sẽ sớm có mặt",
+  "AdvancedTools_InfoBar_MoreOptionsMessage": "Các tùy chọn tùy chỉnh XML bổ sung sẽ có sẵn trong các bản cập nhật tương lai.",
   "Button_OpenWIMUtil": "Mở WIMUtil",
   "Button_DoItLater": "Tôi sẽ làm sau",
   "Dialog_FallbackDownload": "Phương pháp tải xuống thay thế",
