--- a/src/Winhance.UI/Features/Common/Localization/zh-Hans.json
+++ b/src/Winhance.UI/Features/Common/Localization/zh-Hans.json
@@ -146,6 +146,7 @@
   "Category_Optimize_StatusText": "优化您的 Windows 系统性能",
   "Category_Customize_Title": "自定义",
   "Category_Customize_StatusText": "自定义您的 Windows 外观和行为",
+  "Category_AdvancedTools_StatusText": "Windows 定制高级工具",
   "Category_SoftwareApps_Title": "软件和应用",
   "Category_SoftwareApps_StatusText": "管理 Windows 应用和安装软件",
   "Feature_Notifications_Name": "通知",
@@ -996,6 +997,8 @@
   "SoftwareApps_Button_UninstallSelected": "卸载所选项目",
   "SoftwareApps_Tab_WindowsApps": "Windows 应用和功能",
   "SoftwareApps_Tab_ExternalApps": "外部软件",
+  "ViewMode_Table": "表格视图",
+  "ViewMode_Card": "卡片视图",
   "ExternalApps_Category_Browsers": "浏览器",
   "ExternalApps_Category_Compression": "压缩",
   "ExternalApps_Category_CustomizationUtilities": "自定义实用程序",
@@ -1295,6 +1298,9 @@
   "AdvancedTools_Msg_InvalidFilename": "文件必须命名为‘autounattend.xml’才能与 Windows 安装正常工作。\n\n请使用确切名称保存文件：autounattend.xml",
   "AdvancedTools_Msg_XmlGenSuccess": "您的 autounattend.xml 文件已创建！\n\n位置：{0}\n\n后续步骤：\n1. 使用 WIMUtil 功能将此文件添加到 Windows ISO\n2. 或手动将其复制到 Windows 安装介质的根目录\n3. 使用修改后的介质安装 Windows\n\n您想现在使用 WIMUtil 创建包含此文件的 Windows 安装 ISO 吗？",
   "AdvancedTools_Msg_XmlGenError": "生成 autounattend.xml 文件失败。\n\n错误：{0}\n\n请查看日志文件以获取更多详细信息。",
+  "AdvancedTools_GenerateCard_Description": "根据您当前的 Winhance 选择生成 autounattend.xml 文件，以在安装过程中自定义 Windows。",
+  "AdvancedTools_InfoBar_MoreOptionsTitle": "更多生成选项即将推出",
+  "AdvancedTools_InfoBar_MoreOptionsMessage": "额外的 XML 自定义选项将在未来的更新中提供。",
   "Button_OpenWIMUtil": "打开 WIMUtil",
   "Button_DoItLater": "我稍后再做",
   "Dialog_FallbackDownload": "备用下载方法",
