--- a/src/Winhance.UI/Features/Common/Localization/zh-Hant.json
+++ b/src/Winhance.UI/Features/Common/Localization/zh-Hant.json
@@ -146,6 +146,7 @@
   "Category_Optimize_StatusText": "最佳化您的 Windows 系統效能",
   "Category_Customize_Title": "自訂",
   "Category_Customize_StatusText": "自訂您的 Windows 外觀與行為",
+  "Category_AdvancedTools_StatusText": "Windows 自訂進階工具",
   "Category_SoftwareApps_Title": "軟體與應用程式",
   "Category_SoftwareApps_StatusText": "管理 Windows 應用程式與安裝軟體",
   "Feature_Notifications_Name": "通知",
@@ -996,6 +997,8 @@
   "SoftwareApps_Button_UninstallSelected": "解除安裝選取的項目",
   "SoftwareApps_Tab_WindowsApps": "Windows 應用程式與功能",
   "SoftwareApps_Tab_ExternalApps": "外部軟體",
+  "ViewMode_Table": "表格檢視",
+  "ViewMode_Card": "卡片檢視",
   "ExternalApps_Category_Browsers": "瀏覽器",
   "ExternalApps_Category_Compression": "壓縮軟體",
   "ExternalApps_Category_CustomizationUtilities": "自訂工具",
@@ -1295,6 +1298,9 @@
   "AdvancedTools_Msg_InvalidFilename": "檔案必須命名為 'autounattend.xml' 才能在 Windows 安裝時正常運作。\n\n請使用確切名稱儲存檔案：autounattend.xml",
   "AdvancedTools_Msg_XmlGenSuccess": "您的 autounattend.xml 檔案已建立！\n\n位置：{0}\n\n下一步：\n1. 使用 WIMUtil 功能將此檔案加入 Windows ISO\n2. 或手動將其複製到您的 Windows 安裝媒體根目錄\n3. 使用修改後的媒體安裝 Windows\n\n您想要現在使用 WIMUtil 建立包含此檔案的 Windows 安裝 ISO 嗎？",
   "AdvancedTools_Msg_XmlGenError": "產生 autounattend.xml 檔案失敗。\n\n錯誤：{0}\n\n請檢查記錄檔以取得更多詳細資訊。",
+  "AdvancedTools_GenerateCard_Description": "根據您目前的 Winhance 選擇產生 autounattend.xml 檔案，以在安裝過程中自訂 Windows。",
+  "AdvancedTools_InfoBar_MoreOptionsTitle": "更多產生選項即將推出",
+  "AdvancedTools_InfoBar_MoreOptionsMessage": "額外的 XML 自訂選項將在未來的更新中提供。",
   "Button_OpenWIMUtil": "開啟 WIMUtil",
   "Button_DoItLater": "我稍後再做",
   "Dialog_FallbackDownload": "替代下載方式",
