--- a/src/Winhance.UI/Features/Common/Localization/pt.json
+++ b/src/Winhance.UI/Features/Common/Localization/pt.json
@@ -146,6 +146,7 @@
   "Category_Optimize_StatusText": "Otimize o Desempenho do seu Sistema Windows",
   "Category_Customize_Title": "Personalizações",
   "Category_Customize_StatusText": "Personalize a Aparência e Comportamento do seu Windows",
+  "Category_AdvancedTools_StatusText": "Ferramentas avançadas para personalização do Windows",
   "Category_SoftwareApps_Title": "Software e Aplicações",
   "Category_SoftwareApps_StatusText": "Faça a gestão das Aplicações do Windows e Instale Software",
   "Feature_Notifications_Name": "Notificações",
@@ -996,6 +997,8 @@
   "SoftwareApps_Button_UninstallSelected": "Desinstalar Itens Selecionados",
   "SoftwareApps_Tab_WindowsApps": "Aplicações e Funcionalidades do Windows",
   "SoftwareApps_Tab_ExternalApps": "Software Externo",
+  "ViewMode_Table": "Vista de tabela",
+  "ViewMode_Card": "Vista de cartão",
   "ExternalApps_Category_Browsers": "Navegadores",
   "ExternalApps_Category_Compression": "Compressão",
   "ExternalApps_Category_CustomizationUtilities": "Utilitários de Personalização",
@@ -1295,6 +1298,9 @@
   "AdvancedTools_Msg_InvalidFilename": "O ficheiro deve ser nomeado 'autounattend.xml' para funcionar corretamente com a instalação do Windows.\n\nPor favor, guarde o ficheiro com o nome exato: autounattend.xml",
   "AdvancedTools_Msg_XmlGenSuccess": "O seu ficheiro autounattend.xml foi criado!\n\nLocalização: {0}\n\nPróximos passos:\n1. Use a funcionalidade WIMUtil para adicionar este ficheiro a um ISO do Windows\n2. Ou copie-o manualmente para a raiz da sua média de instalação do Windows\n3. Instale o Windows usando a média modificada\n\nGostaria de usar o WIMUtil para criar um ISO de instalação do Windows com este ficheiro agora?",
   "AdvancedTools_Msg_XmlGenError": "Falha ao gerar o ficheiro autounattend.xml.\n\nErro: {0}\n\nPor favor, verifique o ficheiro de log para mais detalhes.",
+  "AdvancedTools_GenerateCard_Description": "Gere um ficheiro autounattend.xml com base nas suas seleções atuais do Winhance para personalizar o Windows durante a instalação.",
+  "AdvancedTools_InfoBar_MoreOptionsTitle": "Mais opções de geração em breve",
+  "AdvancedTools_InfoBar_MoreOptionsMessage": "Opções adicionais de personalização XML estarão disponíveis em atualizações futuras.",
   "Button_OpenWIMUtil": "Abrir WIMUtil",
   "Button_DoItLater": "Farei Mais Tarde",
   "Dialog_FallbackDownload": "Método de Transferência Alternativo",
